# python-sdk

./: LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
chakra_py/: __init__.py  client.py
chakra_sdk/: __init__.py  client.py
chakra_sdk/api/: __init__.py  auth.py  data.py  query.py
tests/: test_auth.py  test_client.py
