[tool.poetry]
name = "chakra-sdk"
version = "0.1.0"
description = "Python SDK for interacting with the Chakra Network API"
authors = ["Chakra Network"]
readme = "README.md"
packages = [{include = "chakra_sdk"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = [
    {version = "^1.5.3", python = ">=3.8,<3.9"},
    {version = "^2.2.3", python = ">=3.9"}
]
requests = "^2.32.3"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = {version = "^24.10.0", python = ">=3.9"}
isort = "^5.13.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
